[package]
name = "kd-tree"
version = "0.5.3"
authors = ["Yuichiro Terada <terada.yuichiro@gmail.com>"]
repository = "https://github.com/u1roh/kd-tree"
documentation = "https://docs.rs/kd-tree"
keywords = ["kdtree", "nearest-neighbor", "closest-point", "pointcloud"]
readme = "README.md"
description = "k-dimensional tree"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
ordered-float = "3.9.2"
pdqselect = "0.1.1"
typenum = "1.17.0"
paste = "1.0.14"
rayon = { version = "1.8.0", optional = true }
nalgebra = { version = "0.32.3", optional = true }
serde = { version = "1.0.195", features = ["derive"], optional = true }

[features]
nalgebra-serde = ["serde", "nalgebra", "nalgebra/serde-serialize"]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3.6"
fux_kdtree = { version = "0.2.0", package = "fux_kdtree" }
kdtree = "0.6.0"
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false
